# scaling-chatbots

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: consumer.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_conversation_provider_model.py
backend/scripts/: seed.py
backend/src/chatlog/: __init__.py  config.py  main.py  providers.py
backend/src/chatlog/api/: conversations.py  dependencies.py  logs.py  providers.py  schemas.py  stats.py
backend/src/chatlog/db/: session.py
backend/src/chatlog/models/: __init__.py  entities.py
backend/src/chatlog/services/: ingestion.py  llm.py  log_store.py  redaction.py  (+2 more)
backend/tests/: test_consumer.py  test_dashboard_contract.py  test_ingest_validation.py  test_ingestion_service.py  test_provider_models.py  test_redaction.py
frontend/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/stats/: page.tsx
frontend/components/: LoadingDots.tsx  LogsTable.tsx  MessageBubble.tsx  PulseDot.tsx  Sidebar.tsx  StatsChart.tsx  TokenChart.tsx
frontend/lib/: api.ts
sdk/examples/: mock_chatbot.py
sdk/src/chatlog_sdk/: __init__.py  adapters.py  config.py  context.py  delivery.py  instrumentation.py  redaction.py
sdk/tests/: test_adapters.py  test_instrumentation.py
shared/src/chatlog_pii/: __init__.py  pii_redactor.py
shared/tests/: test_pii_redactor.py
