[project]
name = "chatlog-backend"
version = "0.1.0"
description = "LLM inference-log backend and instrumentation SDK"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16",
    "asyncpg>=0.30",
    "en-core-web-sm",
    "fastapi>=0.116",
    "httpx>=0.28",
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
    "pydantic-settings>=2.10",
    "redis>=8.0.1",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.35",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.1",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/chatlog", "sdk/src/chatlog_sdk", "shared/src/chatlog_pii"]

[tool.hatch.build.targets.wheel.sources]
"backend/src" = ""
"sdk/src" = ""
"shared/src" = ""

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "sdk/tests", "shared/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
